--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Brygada+1918:ital,wght@1,500&family=PT+Sans&family=Rajdhani:wght@300;400;500&family=Raleway:wght@300&family=Space+Grotesk:wght@300&family=Teko:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <meta
       name="description"
       content="Web site created using create-react-app"
